[package]
name = "brian"
version = "0.1.0"
edition = "2021"
authors = ["griffi-gh <prasol258@gmail.com>"]
license = "MIT"
keywords = ["brainfuck", "interpreter"]
categories = ["compilers"]

[features]
default = []
## Use serde to serialize the interpreter state
serde = ["dep:serde", "arrayvec/serde"]
## Apply unsafe optimizations
unsafe = []

[dependencies]
document-features = "0.2.7"
arrayvec = "0.7.2"
itertools = "0.10"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["real_blackbox"] }

[[bench]]
name = "bench"
harness = false
